# pyroll-elastic-mill-spring

./: LICENSE  README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/: elastic_mill_spring.py
tests/: test_solve.py  test_solve3.py
